@@ -1,3 +1,6 @@
+CHANGELOG
+
+[Master]
 
 [0.3.0]
 - Add simplify, invert, type and semitones
